<resources>
    <string name="app_name">SuperSpy</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">工具箱</string>
    <string name="title_notifications">信息与反馈</string>
    <string name="title_activity_login">登录</string>
    <string name="user_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">注册</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">无效的用户名</string>
    <string name="invalid_password">密码至少5位</string>
    <string name="login_failed">"登录失败"</string>
    <string name="remember_name">"记住账号"</string>
    <string name="remember_pwd">"记住密码"</string>
</resources>